--- a/dsl/camel-dsl-modeline/src/main/docs/dsl-modeline.adoc
+++ b/dsl/camel-dsl-modeline/src/main/docs/dsl-modeline.adoc
@@ -1,18 +1,23 @@
-= DSL Modeline Component (deprecated)
+= DSL Modeline Component
 :doctitle: DSL Modeline
 :shortname: dsl-modeline
 :artifactid: camel-dsl-modeline
-:description: Camel DSL Camel K modeline
+:description: Camel DSL modeline
 :since: 3.16
-:supportlevel: Stable-deprecated
-:deprecated: *deprecated*
+:supportlevel: Stable
 :tabs-sync-option:
 //Manually maintained attributes
 :group: DSL
 
 *Since Camel {since}*
 
+== Camel JBang
+
+There is support for https://www.jbang.dev/documentation/guide/latest/dependencies.html[JBang dependencies] using the `//DEPS` comments style.
+
 == Camel K
+
+*Deprecated*
 
 Support for Camel K style modeline when running Camel standalone such as with Camel JBang.
 
@@ -22,7 +27,3 @@ The following traits is supported:
 - env
 - name
 - property
-
-== Camel JBang
-
-There is also support for https://www.jbang.dev/documentation/guide/latest/dependencies.html[JBang dependencies] using the `//DEPS` comments style.
