CAMEL-22079: camel-dsl-modeline: Remove deprecated camel-k specific modelines

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_12.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_12.adoc
@@ -158,6 +158,10 @@ It is also recommended to migrate your XML-IO XML files to use the new namespace
 Add options allowing the addition of an `Authorization` header for Basic or Bearer authentication to client and
 asynchronous MDN requests.
 
+=== camel-dsl-modeline
+
+Removed deprecated `camel-k:` specific modelines.
+
 === camel-jackson / camel-jacksonxml
 
 The default unmarshalType has been changed from `HashMap` to `LinkedHashMap` that keeps ordering of the elements
