--- a/docs/user-manual/modules/ROOT/pages/backlog-tracer.adoc
+++ b/docs/user-manual/modules/ROOT/pages/backlog-tracer.adoc
@@ -104,7 +104,7 @@ is that the file content has to be read from the file.
 
 == Enabling
 
-You can turn off backlog tracing on `CamelContext`
+You can turn on backlog tracing on `CamelContext`
 
 [source,java]
 ----
