CAMEL-22096: Upgrade Langchain4j version for Langchain4j-chat and langchain4j-tools components

--- a/components/camel-ai/camel-langchain4j-chat/src/main/docs/langchain4j-chat-component.adoc
+++ b/components/camel-ai/camel-langchain4j-chat/src/main/docs/langchain4j-chat-component.adoc
@@ -81,11 +81,11 @@ Add the dependency for LangChain4j OpenAI support:
 </dependency>
 ----
 
-Initialize the OpenAI Chat Language Model, and add it to the Camel Registry:
+Initialize the OpenAI Chat Model, and add it to the Camel Registry:
 
 [source, java]
 ----
-ChatLanguageModel model = OpenAiChatModel.builder()
+ChatModel model = OpenAiChatModel.builder()
                 .apiKey(openApiKey)
                 .modelName(GPT_3_5_TURBO)
                 .temperature(0.3)
