Update docs to include updated trace property

--- a/docs/user-manual/modules/ROOT/pages/tracer.adoc
+++ b/docs/user-manual/modules/ROOT/pages/tracer.adoc
@@ -27,7 +27,7 @@ And in Spring Boot
 
 [source,text]
 ----
-camel.springboot.tracing = true
+camel.trace.enabled = true
 ----
 
 === Setting Tracing in Standby mode
