--- a/docs/user-manual/modules/ROOT/pages/backlog-tracer.adoc
+++ b/docs/user-manual/modules/ROOT/pages/backlog-tracer.adoc
@@ -124,14 +124,14 @@ And in Camel Main you can enable this  in the `application.properties` file:
 
 [source,properties]
 ----
-camel.main.backlog-tracing = true
+camel.trace.enabled = true
 ----
 
 And in Spring Boot you can enable this in the `application.properties` file:
 
 [source,properties]
 ----
-camel.springboot.backlog-tracing = true
+camel.trace.enabled = true
 ----
 
 === Tracing payloads of InputStream types
