camel-http: Renamed class that is not only basic auth

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide.adoc
@@ -21,3 +21,4 @@ You can find the upgrade guide for each release in the following pages:
 - xref:camel-4x-upgrade-guide-4_10.adoc[Upgrade guide 4.9 -> 4.10]
 - xref:camel-4x-upgrade-guide-4_11.adoc[Upgrade guide 4.10 -> 4.11]
 - xref:camel-4x-upgrade-guide-4_12.adoc[Upgrade guide 4.11 -> 4.12]
+- xref:camel-4x-upgrade-guide-4_13.adoc[Upgrade guide 4.12 -> 4.13]
