Camel-PQC: Fix the component description
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/components/camel-pqc/src/main/docs/pqc-component.adoc
+++ b/components/camel-pqc/src/main/docs/pqc-component.adoc
@@ -2,7 +2,7 @@
 :doctitle: PQC Algorithms
 :shortname: pqc
 :artifactid: camel-pqc
-:description: Post Quantum Computing Signature and Verification component.
+:description: Post Quantum Cryptography Signature and Verification component.
 :since: 4.12
 :supportlevel: Preview
 :tabs-sync-option:
