[CAMEL-21862] camel-spring-boot - Remove deprecated camel.springboot. config prefix

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
@@ -19,3 +19,8 @@ Renamed class `org.apache.camel.component.http.BasicAuthenticationHttpClientConf
 
 The deprecated kebab-case has been removed.
 For example `set-body` and `set-header` should be `setBody` / `setHeader` etc.
+
+== Camel Spring Boot
+
+Remove the deprecated `camel.springboot.xxx` configuration syntax. Use `camel.main.xxx` syntax
+which is standard across all runtimes.
