--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_12.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_12.adoc
@@ -236,10 +236,17 @@ The `camel-jetty-starter` has been deprecated in favor of `camel-platform-http-s
 
 The `camel-undertow-starter` has been deprecated in favor of `camel-platform-http-starter` to use the HTTP server from Spring Boot.
 
-
 == camel-langchain4j-tokenizer
 
 The code was upgraded to LangChain4j version 1.0.0, which brings a few breaking changes:
 
 - By default, tokenization now uses segment sizes
 - To tokenize by tokens, the model used in the system must be provided
+
+== Known regressions
+
+On Windows, Camel Jbang export is no more working out of the box. A workaround consists in providing `--maven-wrapper=false`.
+
+On Windows, when using an URL starting with `classpath:` with Camel JBang, most of the actions are not working.
+
+Both are fixed in Camel 4.13.
