--- a/components/camel-openapi-validator/src/main/docs/openapi-validator.adoc
+++ b/components/camel-openapi-validator/src/main/docs/openapi-validator.adoc
@@ -9,10 +9,10 @@
 
 *Since Camel {since}*
 
-Camel comes with a default client request validator for the Camel Rest DSL.
+Camel comes with a default client request/response validator for the Camel Rest DSL.
 
 The `camel-openapi-validator` uses the third party https://bitbucket.org/atlassian/swagger-request-validator/src/master/[Atlassian Swagger Request Validator]
-library instead for client request validator. This library is a more extensive validator than
+library instead for client request/response validator. This library is a more extensive validator than
 the default validator from `camel-core`.
 
 NOTE: This library does not work with running in `camel-jbang`.
