--- a/core/camel-core-engine/src/main/docs/modules/eips/pages/poll-eip.adoc
+++ b/core/camel-core-engine/src/main/docs/modules/eips/pages/poll-eip.adoc
@@ -109,6 +109,15 @@ for example, download a file from xref:ROOT:aws2-s3-component.adoc[AWS S3] as th
 </rest>
 ----
 
+=== Using Poll with file based components
+
+When using `poll` or `pollEnrich` with the file based components, then the `eagerLimitMaxMessagesPerPoll` option
+has changed default from `false` to `true` from **Camel 4.13** onwards. Only use-cases where you need to sort the files first,
+requires to explicit set the option `eagerLimitMaxMessagesPerPoll=false` to make Camel scan for all files first before sorting,
+and then `poll` or `pollEnrich` will then pick the top file after the sorting.
+
+This improves performance for use-cases without need for sorting first.
+
 == See More
 
 - xref:poll-eip.adoc[Poll EIP]
