CAMEL-22177: camel-ftp/camel-smb/camel-azure-files: Keep attempt to create starting dir if failed in doStart so we can recover.

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_13.adoc
@@ -11,7 +11,7 @@ from both 4.0 to 4.1 and 4.1 to 4.2.
 Added a 2nd `lookup` method to `org.apache.camel.spi.TypeConverterRegistry` and changed the `addConverter` to no longer have
 an empty default noop implementation in the interface.
 
-=== camel-file / camel-ftp / camel-smb
+=== camel-file / camel-ftp / camel-smb / camel-azure-files
 
 When using `poll` or `pollEnrich` with the file based components, then the `eagerLimitMaxMessagesPerPoll` option
 has changed default from `false` to `true`. Only use-cases where you need to sort the files first,
@@ -19,6 +19,11 @@ requires to explicit set the option `eagerLimitMaxMessagesPerPoll=false` to make
 and then `poll` or `pollEnrich` will then pick the top file after the sorting.
 
 This improves performance for use-cases without need for sorting first.
+
+The consumers (`camel-ftp`, `camel-smb`, and `camel-azure-files`) will now in case of failure to create starting directory,
+on startup, keep attempting to create the directory on polling, until its successfully created.
+Previously in case of error creating the starting directory then this could cause the consumer to not be able to recover,
+and you would have to restart the route to attempt again.
 
 === camel-http
 
